[tool.poetry]
name = "ja-timex"
version = "0.2.8"
description = "Analyze and parse natural language temporal expression from Japanese sentences"
authors = ["Yuki Okuda <y.okuda@dr-ubie.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yagays/ja-timex"
repository = "https://github.com/yagays/ja-timex"
keywords = ["ja_timex", "NLP", "japanese"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: Japanese",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]

[tool.poetry.dependencies]
python = "^3.8.1"
pendulum = {version = "3.0.0b1", allow-prereleases = true}

[tool.poetry.group.dev.dependencies]
ipython = "8.13.0"
ipdb = "^0.13.13"
flake8 = "^6.1.0"
mypy = "^1.6.0"
black = "^23.9.1"
isort = "^5.12.0"
pytest = "^7.4.2"
streamlit = "1.11.1"
pandas = "2.0.3"
watchdog = "^3.0.0"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.6"
pygments = "^2.16.1"
pymdown-extensions = "^10.3.1"
lxml = "^4.9.3"
tox = "^4.11.3"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "hug"
line_length = 120
src_paths = ["ja_timex", "tests", "tools"]

[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
